--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,10 @@
 <mat-toolbar color="primary">
   <span>{{ title }}</span>
 </mat-toolbar>
+
 <div class="content">
   <app-heroes></app-heroes>
+  <app-messages></app-messages>
 </div>
 
 
