--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,18 @@
 
 <mat-toolbar color="primary">
   <span>{{ title }}</span>
+  <span fxFlex></span>
+  <button
+    mat-icon-button
+    matTooltip="Heroes"
+    aria-label="Heroes List"
+    routerLink="/heroes"
+    >
+    <mat-icon>bolt</mat-icon>
+  </button>
 </mat-toolbar>
 
 <div class="content">
-  <app-heroes></app-heroes>
+  <router-outlet></router-outlet>
   <app-messages></app-messages>
 </div>
-
-
