--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,14 @@
   <span fxFlex></span>
   <button
     mat-icon-button
+    matTooltip="Dashboard"
+    aria-label="Dashboard"
+    routerLink="/dashboard"
+    >
+    <mat-icon>dashboard</mat-icon>
+  </button>
+  <button
+    mat-icon-button
     matTooltip="Heroes"
     aria-label="Heroes List"
     routerLink="/heroes"
@@ -12,7 +20,7 @@
   </button>
 </mat-toolbar>
 
-<div class="content">
+<div class="content" fxLayoutGap="12px">
   <router-outlet></router-outlet>
   <app-messages></app-messages>
 </div>
