--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -1,8 +1,1 @@
-.heroes {
-  cursor: pointer;
-}
-
-.heroes li.selected {
-  background-color: black;
-  color: white;
-}
+.mat-row:hover {cursor: pointer; background: whitesmoke;}
