--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,9 +1,26 @@
 <div *ngIf="hero">
-  <h2>{{ hero.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{ hero.id }}</div>
-  <div><span>name: </span>{{ hero.name }}</div>
-  <div>
-    <label for="name">hero name:</label>
-    <input id="name" [(ngModel)]="hero.name" placeholder="name" type="text" />
-  </div>
+  <h1>{{ hero.name | uppercase }} Details</h1>
+  <mat-card>
+    <mat-card-content fxLayout="column">
+      <mat-form-field>
+        <mat-label>ID</mat-label>
+        <input matInput disabled [value]="hero.id">
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Hero name</mat-label>
+        <input
+        id="name"
+        matInput
+        [(ngModel)]="hero.name"
+        placeholder="Name"
+        type="text"
+        />
+      </mat-form-field>
+    </mat-card-content>
+
+    <mat-card-actions>
+      <button color="accent" mat-raised-button (click)="goBack()">Go back</button>
+    </mat-card-actions>
+  </mat-card>
 </div>
