--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,5 +1,5 @@
 <mat-accordion *ngIf="messageService.getMessages().length">
-  <mat-expansion-panel expanded="false">
+  <mat-expansion-panel expanded="true">
     <mat-expansion-panel-header>
       <mat-panel-title>
         Messages
@@ -13,9 +13,11 @@
         Clear Messages
       </button>
     </p>
-    <div *ngFor="let message of messageService.getMessages()">
-      {{message}}
-    </div>
+    <mat-list>
+      <mat-list-item *ngFor="let message of messageService.getMessages()">
+        {{ message }}
+      </mat-list-item>
+    </mat-list>
   </mat-expansion-panel>
 </mat-accordion>
 
