--- a/src/app/heroes/components/heroes/heroes.component.html
+++ b/src/app/heroes/components/heroes/heroes.component.html
@@ -15,7 +15,7 @@
 
   <!-- Header and Row Declarations -->
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row
+  <mat-row class="pointer"
     *matRowDef="let row; columns: displayedColumns"
     [routerLink]="['/heroes', row.id]"
   ></mat-row>
