--- a/src/app/heroes/components/heroes/heroes.component.scss
+++ b/src/app/heroes/components/heroes/heroes.component.scss
@@ -1,7 +1,7 @@
-.pointer:hover {
-  cursor: pointer;
-  background: rgb(83, 83, 83);
-}
-//.mat-row:hover {
+//.pointer:hover {
 //  cursor: pointer;
-// background: whitesmoke;}
+//  background: rgb(83, 83, 83);
+//}
+.mat-row:hover {
+  cursor: pointer;
+  background: whitesmoke;}
